fixed the urls on buy btns, small footer icons and width, gradient column flex, footer z-index

--- a/src/components/Tabs/design/design.css
+++ b/src/components/Tabs/design/design.css
@@ -14,6 +14,14 @@
   }
 
 
+  .design-page-cont{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
+    
+  }
+
 
   /* --------------------------------< COLOR >---------------------------------------- */
 
@@ -41,7 +49,10 @@
 }
 
 .color-gradient__cont{
-
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 }
 
 .color__sub{
@@ -190,7 +201,7 @@
     }
 
     .color-gradient__cont{
-      
+     
     }
 
 
